--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="@string/hint_enter_user_name"
-        android:inputType="text"
-        android:text="@string/default_user_name"/>
-
-    <EditText
-        android:id="@+id/album_id"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/user_name"
-        android:hint="@string/hint_enter_album_id"
-        android:inputType="number"
-        android:text="@string/default_album_id"/>
+        android:inputType="text" />
 
     <Button
         android:id="@+id/submit_button"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@id/album_id"
+        app:layout_constraintTop_toBottomOf="@id/user_name"
         android:text="@string/confirm"/>
 
 </android.support.constraint.ConstraintLayout>
