--- a/app/src/main/res/layout/item_browse_photo.xml
+++ b/app/src/main/res/layout/item_browse_photo.xml
@@ -5,7 +5,7 @@
     android:layout_height="250dp">
 
     <ImageView
-        android:id="@+id/album_cover"
+        android:id="@+id/photo_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
