--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,17 @@
         android:inputType="text" />
 
     <Button
-        android:id="@+id/submit_button"
+        android:id="@+id/clear_button"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintTop_toBottomOf="@id/user_name"
+        android:text="@string/clear"/>
+
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/clear_button"
         android:text="@string/confirm"/>
 
 </android.support.constraint.ConstraintLayout>
