--- a/app/src/main/res/layout/activity_browse_album.xml
+++ b/app/src/main/res/layout/activity_browse_album.xml
@@ -9,15 +9,18 @@
         android:id="@+id/browse_album_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_next_page"/>
 
     <Button
         android:id="@+id/btn_previous_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/previous_page"
-        android:layout_gravity="bottom"
-        app:layout_constraintTop_toBottomOf="@id/browse_album_recycler_view"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_next_page"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
@@ -26,7 +29,7 @@
         android:layout_height="wrap_content"
         android:text="@string/next_page"
         app:layout_constraintStart_toEndOf="@id/btn_previous_page"
-        app:layout_constraintTop_toBottomOf="@id/browse_album_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
