Use Room DB to Record Search History
Use Room DB to record the search history
and apply them to the auto-complete drop
down list in user name input edit text
in main page.

--- a/app/src/main/res/layout/item_browse_photo.xml
+++ b/app/src/main/res/layout/item_browse_photo.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/photo_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/photo_name"/>
 
     <TextView
         android:id="@+id/photo_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="1"
-        android:ellipsize="end"/>
+        android:ellipsize="end"
+        app:layout_constraintTop_toBottomOf="@id/photo_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="photo name"/>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
