--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,6 +17,7 @@
         <item>j1623</item>
         <item>kingslife</item>
         <item>k540321</item>
+        <item>fabowen</item>
     </string-array>
 
 </resources>
