--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,18 @@
         android:text="@string/clear"/>
 
     <Button
-        android:id="@+id/submit_button"
+        android:id="@+id/clear_history_button"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintTop_toBottomOf="@id/clear_button"
+        app:layout_constraintBottom_toTopOf="@id/submit_button"
+        android:text="@string/clear_history"/>
+
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/clear_history_button"
         android:text="@string/confirm"/>
 
 </android.support.constraint.ConstraintLayout>
