--- a/app/src/main/res/layout/item_album_list.xml
+++ b/app/src/main/res/layout/item_album_list.xml
@@ -1,36 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="250dp">
 
     <ImageView
         android:id="@+id/album_cover"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        app:layout_constraintVertical_chainStyle="spread"
-        app:layout_constraintVertical_weight="1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/album_name"/>
 
     <TextView
         android:id="@+id/album_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/album_cover"
+        app:layout_constraintBottom_toTopOf="@id/album_description"
+        android:lines="1"
+        android:ellipsize="end"
+        tools:text="album name"/>
 
     <TextView
         android:id="@+id/album_description"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/album_name"
+        app:layout_constraintBottom_toTopOf="@id/album_photo_number"
         android:lines="1"
-        android:ellipsize="end"/>
+        android:ellipsize="end"
+        tools:text="album description"/>
 
     <TextView
         android:id="@+id/album_photo_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/album_description"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="1張照片"/>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
