--- a/app/src/main/res/layout/activity_album_list.xml
+++ b/app/src/main/res/layout/activity_album_list.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/all_albums"
-        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btn_open_albums"
         app:layout_constraintBottom_toBottomOf="parent"/>
