--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,11 @@
         app:layout_constraintTop_toBottomOf="@id/clear_history_button"
         android:text="@string/confirm"/>
 
+    <Button
+        android:id="@+id/pchome_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/submit_button"
+        android:text="@string/pchome_button"/>
+
 </android.support.constraint.ConstraintLayout>
